Fix git.ipynb notebook

--- a/notebooks/services/git.ipynb
+++ b/notebooks/services/git.ipynb
@@ -564,7 +564,7 @@
               " GitCommit('Javier de la Rúa Martínez', '[HOPSWORKS-2828][fix] Fix end_to_end_sklearn notebook\\n', '0fdb66df94bf08d15785a42b72e2337b1322b235'),\n",
               " GitCommit('GitHub', 'Fix typos (#285)\\n\\na numerical, not an numerical\\r\\nin this notebook,', 'b6dfd46aa645b5b1e766404de11d44219788ee83'),\n",
               " GitCommit('Javier de la Rúa Martínez', 'Include examples in the UI\\n', 'f64b6adc7940cd1c0a87696a01d8a7ea8bfee778'),\n",
-              " GitCommit('Javier de la Rúa Martínez', '[HOPSWORKS-2828] Add notebooks for python serving on KServe\\n', '28d1a20a80d52fb8e815b27e83d4477fb9450fae'),\n",
+              " GitCommit('Javier de la Rúa Martínez', '[HOPSWORKS-2828] Add notebooks for python serving on KFServing\\n', '28d1a20a80d52fb8e815b27e83d4477fb9450fae'),\n",
               " GitCommit('GitHub', 'Update README for Spark Jobs Client (#286)\\n\\n', 'c2d74c21bec3fe4d34c304ffffbd36b4de2aa32f'),\n",
               " GitCommit('Fabio Buso', 'Prepare development for version 2.6.0-SNAPSHOT\\n', '63a93074518beef7ed988a6a629254d33cdcda0f'),\n",
               " GitCommit('GitHub', '[HOPSWORKS-2952] update hsfs examples with train_split property (#287)\\n\\n', 'f2f18ba0a00fef6d120e29c8c6bcf1681f9643b4'),\n",
