Add kafka example using Hopsworks python SDK

--- a/notebooks/services/datasets.ipynb
+++ b/notebooks/services/datasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "51cb0f38",
+   "id": "c52b5073",
    "metadata": {},
    "source": [
     "## Dataset API "
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a82c505",
+   "id": "e97bf0ec",
    "metadata": {},
    "source": [
     "This API makes it easy to upload data to your cluster, such as for example a python program to run as a job. Also to download data from the cluster to your local environment."
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73807a7e",
+   "id": "491b7181",
    "metadata": {},
    "source": [
     "## Scope"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba6b5568",
+   "id": "6798df4a",
    "metadata": {},
    "source": [
     "This notebook showcases the following functionality:\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "939b375b",
+   "id": "118b6c52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fff32f29",
+   "id": "c191b06d",
    "metadata": {},
    "source": [
     "## Connect to the cluster"
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c3831e0d",
+   "id": "6446746e",
    "metadata": {},
    "outputs": [
     {
@@ -77,17 +77,17 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7b389a18",
+   "id": "3a91b511",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Uncomment when connecting to the cluster from an external environment.\n",
-    "# connection = hopsworks.connection(host='my_instance', port=443, api_key_value='apikey')"
+    "# connection = hopsworks.connection(project='my_project', host='my_instance', port=443, api_key_value='apikey')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c14d410c",
+   "id": "afd5c3cb",
    "metadata": {},
    "source": [
     "## Get the project"
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "628c25e7",
+   "id": "eebf54bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e5adec66",
+   "id": "0a47432b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef30afef",
+   "id": "1dc90f42",
    "metadata": {},
    "source": [
     "## Get the API"
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7d89f062",
+   "id": "913c5584",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "baa95e64",
+   "id": "b165b4ca",
    "metadata": {},
    "source": [
     "## Upload file to hopsworks"
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d5191017",
+   "id": "e2091bc0",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "30d43891",
+   "id": "71182789",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3b093dcd",
+   "id": "1b31b898",
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3dc3131e",
+   "id": "40937345",
    "metadata": {},
    "source": [
     "## Download file from hopsworks"
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "abde8731",
+   "id": "b0240edb",
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "3f026b3b",
+   "id": "5bbe882f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "7b770228",
+   "id": "15fc523d",
    "metadata": {},
    "outputs": [
     {
