--- a/notebooks/services/jobs.ipynb
+++ b/notebooks/services/jobs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "245785d5",
+   "id": "6e610b6e",
    "metadata": {},
    "source": [
     "## Jobs API"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cab7e73",
+   "id": "374d92b4",
    "metadata": {},
    "source": [
     "This API provides the possibility to create a job of an existing python or spark program, execute it and access application logs."
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7b81fb7",
+   "id": "b79e1085",
    "metadata": {},
    "source": [
     "## Scope"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0fb6b8f",
+   "id": "fac87590",
    "metadata": {},
    "source": [
     "* Define a job configuration\n",
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "1dea26ab",
+   "id": "c5beb4d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54b1e492",
+   "id": "784247c7",
    "metadata": {},
    "source": [
     "## Connect to the cluster"
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "f0cf7a69",
+   "id": "23ac970c",
    "metadata": {},
    "outputs": [
     {
@@ -76,17 +76,17 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "6a6b423c",
+   "id": "0c48faaa",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Uncomment when connecting to the cluster from an external environment.\n",
-    "# connection = hopsworks.connection(host='my_instance', port=443, api_key_value='apikey')"
+    "# connection = hopsworks.connection(project='my_project', host='my_instance', port=443, api_key_value='apikey')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "296b9b73",
+   "id": "b75cdf45",
    "metadata": {},
    "source": [
     "## Get the project"
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "83d82eec",
+   "id": "cef9605b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "1813b6f4",
+   "id": "e288cedf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1c869ba",
+   "id": "2c26f619",
    "metadata": {},
    "source": [
     "## Upload SparkPI program to cluster"
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "8baba04e",
+   "id": "554aa4c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "b5f67efe",
+   "id": "c82447aa",
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "6680671b",
+   "id": "870b44ff",
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "55ce8268",
+   "id": "567fe494",
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad9de311",
+   "id": "f92b8f04",
    "metadata": {},
    "source": [
     "## Get job configuration for a Spark Job"
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "d25a79d2",
+   "id": "74fc4a2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "c058195a",
+   "id": "141f18e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "e3eb0847",
+   "id": "3a54f863",
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "018a5d47",
+   "id": "c01eeeb9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "630c7e7a",
+   "id": "0fbca875",
    "metadata": {},
    "source": [
     "## Create a job"
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "330d7bc2",
+   "id": "d6e854a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "d9ef86ba",
+   "id": "1774e0a7",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "8b2ed350",
+   "id": "9c41f7e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "78b98a78",
+   "id": "d9936663",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbed5465",
+   "id": "3df56c6f",
    "metadata": {},
    "source": [
     "## Execute the job"
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "c096e3ef",
+   "id": "07dbd973",
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "9bafb04f",
+   "id": "0d7c19e0",
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38dc2e6e",
+   "id": "68f6225d",
    "metadata": {},
    "source": [
     "## Download the logs for the execution"
@@ -426,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "949510a7",
+   "id": "49be3df8",
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "78ede317",
+   "id": "8cd70ed2",
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "ab63c32c",
+   "id": "eb196022",
    "metadata": {},
    "outputs": [
     {
@@ -1494,7 +1494,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "4f144e9e",
+   "id": "670d074a",
    "metadata": {},
    "outputs": [
     {
@@ -1515,7 +1515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ac9c512",
+   "id": "7d27bc76",
    "metadata": {},
    "source": [
     "## Update the configuration"
@@ -1524,7 +1524,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "b148695c",
+   "id": "4d8d1f0a",
    "metadata": {},
    "outputs": [
     {
@@ -1562,7 +1562,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "c8e39ccb",
+   "id": "726f6459",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1576,7 +1576,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "07c2e057",
+   "id": "a459d0c9",
    "metadata": {},
    "outputs": [
     {
@@ -1614,7 +1614,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "2f1760ad",
+   "id": "cde9af58",
    "metadata": {},
    "outputs": [],
    "source": [
