--- a/notebooks/services/secrets.ipynb
+++ b/notebooks/services/secrets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f1e60411",
+   "id": "edc2087e",
    "metadata": {},
    "source": [
     "## Secrets API "
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c27ff9f",
+   "id": "305d13e8",
    "metadata": {},
    "source": [
     "This API provides the possibility to manage secrets in the platform."
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e91a70a4",
+   "id": "130e687e",
    "metadata": {},
    "source": [
     "## Scope"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9c87d7f",
+   "id": "8d443010",
    "metadata": {},
    "source": [
     "* Create a new secret\n",
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a9a40735",
+   "id": "ea3cb5c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e4001db",
+   "id": "7f69dc53",
    "metadata": {},
    "source": [
     "## Connect to the cluster"
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "322625dc",
+   "id": "122c9d55",
    "metadata": {},
    "outputs": [
     {
@@ -74,17 +74,17 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4e616781",
+   "id": "95d063db",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Uncomment when connecting to the cluster from an external environment.\n",
-    "# connection = hopsworks.connection(host='my_instance', port=443, api_key_value='apikey')"
+    "# connection = hopsworks.connection(project='my_project', host='my_instance', port=443, api_key_value='apikey')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0de98118",
+   "id": "d394b2d6",
    "metadata": {},
    "source": [
     "## Get the API"
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "07a1102a",
+   "id": "3ed0cd2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fc61725",
+   "id": "5fb25295",
    "metadata": {},
    "source": [
     "## Create new secret"
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fbc6efea",
+   "id": "876a4a24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "53a5b0d5",
+   "id": "dcb18a1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eccb966b",
+   "id": "6ae3d987",
    "metadata": {},
    "source": [
     "## Get existing secrets"
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3bf9fb12",
+   "id": "e440d4c4",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8fbc40dc",
+   "id": "fb06835c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39c7142d",
+   "id": "e567baac",
    "metadata": {},
    "source": [
     "## Secret properties"
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "fcfc1d44",
+   "id": "6193df5d",
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d4f657fd",
+   "id": "04718b5d",
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66117da5",
+   "id": "6af7c626",
    "metadata": {},
    "source": [
     "## Delete secret"
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "974d99c8",
+   "id": "0239b944",
    "metadata": {},
    "outputs": [],
    "source": [
