Updated Distributed Training with Python and HPO with Spark examples

--- a/notebooks/ml/Maggy/Hopsworks/Tensorflow/maggy-mnist-example.ipynb
+++ b/notebooks/ml/Maggy/Hopsworks/Tensorflow/maggy-mnist-example.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "---\n",
     "title: \"Distributed Hyperparameter Optimization on MNIST Dataset\"\n",
@@ -9,10 +10,7 @@
     "type: technical_note\n",
     "draft: false\n",
     "---"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
@@ -68,7 +66,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>9</td><td>application_1556201759536_0001</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1556201759536_0001/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks1.logicalclocks.com:8042/node/containerlogs/container_e04_1556201759536_0001_01_000001/dev_maggy__meb10000\">Link</a></td><td>✔</td></tr></table>"
+       "<tr><th>ID</th><th>Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>127</td><td>application_1647614285014_0093</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1647614285014_0093/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_e08_1647614285014_0093_01_000001/maggymastertest__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -156,7 +154,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from maggy import experiment\n",
+    "from maggy.experiment import experiment\n",
     "from maggy.callbacks import KerasBatchEnd"
    ]
   },
@@ -177,7 +175,7 @@
     "#########\n",
     "### maggy: hyperparameters as arguments and including the reporter\n",
     "#########\n",
-    "def training_function(kernel, pool, dropout, reporter):\n",
+    "def training_function(hparams, reporter):\n",
     "    import tensorflow as tf\n",
     "    from tensorflow import keras\n",
     "    from tensorflow.keras.models import Sequential\n",
@@ -192,11 +190,15 @@
     "    num_classes = 10\n",
     "    epochs = 1\n",
     "\n",
+    "    kernel = hparams['kernel'] \n",
+    "    pool = hparams['pool'] \n",
+    "    dropout = hparams['dropout'] \n",
+    "    \n",
     "    # Input image dimensions\n",
     "    img_rows, img_cols = 28, 28\n",
     "    \n",
-    "    train_filenames = [hdfs.project_path() + \"TourData/mnist/train/train.tfrecords\"]\n",
-    "    validation_filenames = [hdfs.project_path() + \"TourData/mnist/validation/validation.tfrecords\"]\n",
+    "    train_filenames = [hdfs.project_path() + \"Resources/mnist/train/train.tfrecords\"]\n",
+    "    validation_filenames = [hdfs.project_path() + \"Resources/mnist/validation/validation.tfrecords\"]\n",
     "    \n",
     "    # Create an iterator over the dataset\n",
     "    def data_input(filenames, batch_size=128, shuffle=False, repeat=None):\n",
@@ -290,7 +292,7 @@
     "    #########\n",
     "    ### maggy: return the metric to be optimized, test accuracy in this case\n",
     "    #########\n",
-    "    return score[1]"
+    "    return {'loss': score[0], 'accuracy': score[1]}"
    ]
   },
   {
@@ -314,13 +316,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from maggy.experiment_config import OptimizationConfig\n",
+    "from maggy.config import HyperparameterOptConfig\n",
     "\n",
-    "config = OptimizationConfig(num_trials=4, optimizer=\"randomsearch\", searchspace=sp, direction=\"max\", es_interval=1, es_min=5, name=\"hp_tuning_test\")"
+    "config = HyperparameterOptConfig(num_trials=4, \n",
+    "                                 optimizer=\"randomsearch\", \n",
+    "                                 searchspace=sp, \n",
+    "                                 direction=\"max\", \n",
+    "                                 es_interval=1, \n",
+    "                                 es_min=5, \n",
+    "                                 name=\"hp_tuning_test\"                                \n",
+    "                                )"
    ]
   },
   {
@@ -333,9 +342,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-4:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/srv/hops/anaconda/envs/theenv/lib/python3.8/threading.py\", line 932, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"/srv/hops/anaconda/envs/theenv/lib/python3.8/threading.py\", line 870, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/srv/hops/anaconda/envs/theenv/lib/python3.8/site-packages/sparkmagic/magics/sparkmagicsbase.py\", line 345, in _heartbeat\n",
+      "    resp = self._request(self.hb_sock,'LOG')\n",
+      "  File \"/srv/hops/anaconda/envs/theenv/lib/python3.8/site-packages/sparkmagic/magics/sparkmagicsbase.py\", line 284, in _request\n",
+      "    resp = MessageSocket.receive(self, req_sock)\n",
+      "  File \"/srv/hops/anaconda/envs/theenv/lib/python3.8/site-packages/sparkmagic/magics/sparkmagicsbase.py\", line 199, in receive\n",
+      "    raise Exception(\"socket closed\")\n",
+      "Exception: socket closed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Detected Environment: Hopsworks.\n",
+      "\n",
+      "------ RandomSearch Results ------ direction(max) \n",
+      "BEST combination {\"kernel\": 8, \"pool\": 7, \"dropout\": 0.8961777844635714} -- metric 1.9056870937347412\n",
+      "WORST combination {\"kernel\": 3, \"pool\": 5, \"dropout\": 0.06569354121084778} -- metric 0.5124494433403015\n",
+      "AVERAGE metric -- 0.8846153616905212\n",
+      "EARLY STOPPED Trials -- 0\n",
+      "Total job time 0 hours, 8 minutes, 41 seconds\n",
+      "\n",
+      "Finished experiment."
+     ]
+    }
+   ],
    "source": [
     "result = experiment.lagom(train_fn=training_function, config=config)"
    ]
@@ -346,24 +391,31 @@
    "source": [
     "To observe the progress, you can check the sterr of the spark executors. TensorBoard support is added in the coming version."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
    "display_name": "PySpark",
-   "language": "",
+   "language": "python",
    "name": "pysparkkernel"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "python",
-    "version": 2
+    "version": 3
    },
    "mimetype": "text/x-python",
    "name": "pyspark",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "python3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
