--- a/notebooks/ml/Maggy/Hopsworks/Tensorflow/python-maggy-MNIST-tf-dist.ipynb
+++ b/notebooks/ml/Maggy/Hopsworks/Tensorflow/python-maggy-MNIST-tf-dist.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -41,7 +41,7 @@
    "outputs": [],
    "source": [
     "from maggy.experiment import experiment\n",
-    "from maggy.experiment_config.tf_distributed import TfDistributedConfig\n",
+    "from maggy.config.tf_distributed import TfDistributedConfig\n",
     "\n",
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,9 +96,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
+      "11493376/11490434 [==============================] - 0s 0us/step\n"
+     ]
+    }
+   ],
    "source": [
     "mnist = tf.keras.datasets.mnist\n",
     "\n",
@@ -123,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -131,13 +140,16 @@
    },
    "outputs": [],
    "source": [
-    "def training_function(model, train_set, test_set, hparams):\n",
+    "def training_function(model, dataset, hparams):\n",
     "    \n",
     "    # Define training parameters\n",
     "    num_epochs = 10\n",
     "    batch_size = 256\n",
     "    learning_rate = 0.1\n",
     "\n",
+    "    train_set = dataset[0]\n",
+    "    test_set = dataset[1]\n",
+    "    \n",
     "    criterion = keras.losses.SparseCategoricalCrossentropy()\n",
     "    optimizer = keras.optimizers.SGD(learning_rate=learning_rate,momentum=0.9,decay=1e-5)\n",
     "    \n",
@@ -175,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,8 +199,7 @@
     "#pass the model parameters in the last \n",
     "config = TfDistributedConfig(name=\"tf_test\", \n",
     "                             model=model, \n",
-    "                             train_set=(x_train, y_train), \n",
-    "                             test_set=(x_test, y_test),\n",
+    "                             dataset=[(x_train, y_train),(x_test, y_test)],\n",
     "                             hparams=model_parameters\n",
     "                            )"
    ]
@@ -204,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -215,38 +226,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-02-16 10:52:47,768 INFO: Using MirroredStrategy with devices ('/device:CPU:0',)\n",
-      "2022-02-16 10:52:47,769 INFO: Single-worker MultiWorkerMirroredStrategy with local_devices = ('/device:CPU:0',), communication = CommunicationImplementation.AUTO\n",
-      "2022-02-16T10:52:47.771477 (0/0): train_set or test_set is null, data has not been sharded. \n",
+      "2022-05-04 09:31:44,189 INFO: Using MirroredStrategy with devices ('/device:CPU:0',)\n",
+      "2022-05-04 09:31:44,191 INFO: Single-worker MultiWorkerMirroredStrategy with local_devices = ('/device:CPU:0',), communication = CommunicationImplementation.AUTO\n",
+      "2022-05-04T09:31:44.192980 (0/0): index of slice 0 \n",
       "\n",
-      "2022-02-16T10:52:47.771691 (0/0): index of slice 0 \n",
-      "\n",
-      "2022-02-16T10:52:47.771738 (0/0): Starting distributed training. \n",
+      "2022-05-04T09:31:44.193392 (0/0): Starting distributed training. \n",
       "\n",
       "Epoch 1/10\n",
-      "235/235 [==============================] - 13s 43ms/step - loss: 0.7543 - accuracy: 0.7819\n",
+      "235/235 [==============================] - 15s 49ms/step - loss: 0.6362 - accuracy: 0.8082\n",
       "Epoch 2/10\n",
-      "235/235 [==============================] - 10s 41ms/step - loss: 0.1528 - accuracy: 0.9553\n",
+      "235/235 [==============================] - 10s 44ms/step - loss: 0.1048 - accuracy: 0.9687\n",
       "Epoch 3/10\n",
-      "235/235 [==============================] - 10s 41ms/step - loss: 0.0815 - accuracy: 0.9762\n",
+      "235/235 [==============================] - 10s 44ms/step - loss: 0.0602 - accuracy: 0.9813\n",
       "Epoch 4/10\n",
-      "235/235 [==============================] - 10s 43ms/step - loss: 0.0488 - accuracy: 0.9855\n",
+      "235/235 [==============================] - 10s 42ms/step - loss: 0.0378 - accuracy: 0.9881\n",
       "Epoch 5/10\n",
-      "235/235 [==============================] - 10s 43ms/step - loss: 0.0378 - accuracy: 0.9878\n",
+      "235/235 [==============================] - 10s 42ms/step - loss: 0.0303 - accuracy: 0.9901\n",
       "Epoch 6/10\n",
-      "235/235 [==============================] - 10s 42ms/step - loss: 0.0263 - accuracy: 0.9918\n",
+      "235/235 [==============================] - 11s 45ms/step - loss: 0.0192 - accuracy: 0.9942\n",
       "Epoch 7/10\n",
-      "235/235 [==============================] - 10s 42ms/step - loss: 0.0177 - accuracy: 0.9946\n",
+      "235/235 [==============================] - 10s 43ms/step - loss: 0.0155 - accuracy: 0.9952\n",
       "Epoch 8/10\n",
-      "235/235 [==============================] - 10s 43ms/step - loss: 0.0147 - accuracy: 0.9953\n",
+      "235/235 [==============================] - 10s 41ms/step - loss: 0.0079 - accuracy: 0.9979\n",
       "Epoch 9/10\n",
-      "235/235 [==============================] - 10s 42ms/step - loss: 0.0087 - accuracy: 0.9975\n",
+      "235/235 [==============================] - 9s 40ms/step - loss: 0.0068 - accuracy: 0.9981\n",
       "Epoch 10/10\n",
-      "235/235 [==============================] - 10s 42ms/step - loss: 0.0052 - accuracy: 0.9989\n",
+      "235/235 [==============================] - 10s 43ms/step - loss: 0.0034 - accuracy: 0.9993\n",
       "Testing\n",
-      "313/313 [==============================] - 3s 6ms/step - loss: 0.0926 - accuracy: 0.9772\n",
-      "2022-02-16T10:54:35.439119 (0/0): Finished distributed training. \n",
-      "\n"
+      "313/313 [==============================] - 3s 6ms/step - loss: 0.0875 - accuracy: 0.9796\n",
+      "2022-05-04T09:33:34.799933 (0/0): Finished distributed training. \n",
+      "\n",
+      "Final average test loss: 0.088\n",
+      "Finished experiment. Total run time: 0 hours, 1 minutes, 52 seconds\n"
      ]
     }
    ],
@@ -256,14 +267,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss: 0.09255693107843399\n"
+      "loss: {'test result': 0.08752734214067459}\n"
      ]
     }
    ],
