--- a/notebooks/services/opensearch.ipynb
+++ b/notebooks/services/opensearch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "de9184b3",
+   "id": "8d344a30",
    "metadata": {},
    "source": [
     "## OpenSearch API"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11a5f4df",
+   "id": "997c556e",
    "metadata": {},
    "source": [
     "This API provides the configuration to setup an opensearch-py client for the OpenSearch cluster."
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96959925",
+   "id": "c703fcf9",
    "metadata": {},
    "source": [
     "## Scope"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d365e5b3",
+   "id": "3a526371",
    "metadata": {},
    "source": [
     "* Create and configure opensearch-py client\n",
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3a77d1e8",
+   "id": "dc60e827",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "608da4f0",
+   "id": "266e2937",
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b1617b44",
+   "id": "50b92d0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "54a5e82e",
+   "id": "8f8b5aa3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8858bf1",
+   "id": "23e2eb0b",
    "metadata": {},
    "source": [
     "### Configure the OpenSearch client"
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7e5bc3b2",
+   "id": "929314ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c63cec4a",
+   "id": "666be9b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "483c4e1f",
+   "id": "004924f7",
    "metadata": {},
    "source": [
     "### Create a simple index"
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6a31f40a",
+   "id": "c239c130",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b5a79649",
+   "id": "dfcc81d8",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb86672d",
+   "id": "16097b7a",
    "metadata": {},
    "source": [
     "### List the indices"
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "febd6eaf",
+   "id": "171e4fb9",
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ed97357",
+   "id": "1136cc6f",
    "metadata": {},
    "source": [
     "### Add a document"
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "fb6468d3",
+   "id": "9da5e21d",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dba3732a",
+   "id": "b9407974",
    "metadata": {},
    "source": [
     "### Search for document"
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "7bc8c3e5",
+   "id": "2889597c",
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "183e4534",
+   "id": "2314e52f",
    "metadata": {},
    "source": [
     "### Delete the document"
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a31ce79e",
+   "id": "a878aa13",
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d160817",
+   "id": "d38d26f3",
    "metadata": {},
    "source": [
     "### Delete the index"
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ffa69da4",
+   "id": "5a22dbe6",
    "metadata": {},
    "outputs": [
     {
@@ -356,16 +356,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "145e318a",
+   "id": "f70f3944",
    "metadata": {},
    "source": [
-    "### Create k-NN index"
+    "## k-NN recommendation example"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e0915ca",
+   "metadata": {},
+   "source": [
+    "### Create index"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "a7fd39e5",
+   "id": "20248369",
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f29eeda5",
+   "id": "8e588ca7",
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d99c7e6",
+   "id": "68536c25",
    "metadata": {},
    "source": [
     "### List the indices"
@@ -427,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "503d33d8",
+   "id": "614b0f34",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d76e5e50",
+   "id": "21681dcb",
    "metadata": {},
    "source": [
     "### Add vectors bulk"
@@ -455,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "48d22025",
+   "id": "ce151679",
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +500,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34e3d691",
+   "id": "c42c4627",
    "metadata": {},
    "source": [
     "### Get most similar vector"
@@ -501,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "d402409a",
+   "id": "ed320cbb",
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33a1a02e",
+   "id": "e38c7ae7",
    "metadata": {},
    "source": [
     "#### The highest score corresponds to the vector that is most similar to [2.5, 3]"
@@ -543,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "d50c03bc",
+   "id": "fc8161b0",
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +633,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "577b081f",
+   "id": "2098eaf4",
    "metadata": {},
    "source": [
     "### Delete the index"
@@ -634,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "1f5cfd22",
+   "id": "a4c5c9ea",
    "metadata": {},
    "outputs": [
     {
